[package]
name = "forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
timer = "0.2.0"
clap = { version = "3.2.14", features = ["derive"] }
libc = "0.2.126"
rand = "0.8.5"

[package.metadata.rust-analyzer]
rustc_private=true
